--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "vue-flatpickr-component": "^7.0.6",
+        "vue-sweetalert": "^0.1.18"
     },
     "dependencies": {
         "font-awesome": "^4.7.0"
